--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="style.css" />
 
+    <script defer src="script.js"></script>
+
     <title>Roman Numeral Converter</title>
   </head>
   <body>
