--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         max="3999"
       />
       <button id="convert-btn">Convert</button>
-      <p id="output" class="hidden"></p>
+      <p id="output" class=""></p>
     </div>
   </body>
 </html>
