--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script defer src="script.js"></script>
 
-    <title>Roman Numeral Converter</title>
+    <title>LOL</title>
   </head>
   <body>
     <div class="container">
